# PINNs

./: PINN.py  README.md  diffusion_eq.ipynb  main_eq.ipynb  pyproject.toml  utilities.py
